--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   cloud_firestore: ^0.16.0
   toast: ^0.1.5
   firebase_database: ^6.0.0
+  firebase_storage: ^7.0.0
 
 
 dev_dependencies:
@@ -61,6 +62,12 @@ flutter:
     - assets/welcome.png
     - assets/head.png
     - assets/nextbutton.png
+    - assets/head1.png
+    - assets/signin.png
+    - assets/signup.png
+
+
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
