--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   toast: ^0.1.5
   firebase_database: ^6.0.0
   firebase_storage: ^7.0.0
+  rxdart: ^0.22.0
+  flutter_bloc: ^2.1.1
 
 
 dev_dependencies:
