--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   firebase_storage: ^7.0.0
   rxdart: ^0.22.0
   flutter_bloc: ^2.1.1
+  cupertino_back_gesture: ^0.0.4+1
 
 
 dev_dependencies:
