--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   rxdart: ^0.22.0
   flutter_bloc: ^2.1.1
   cupertino_back_gesture: ^0.0.4+1
+  shared_preferences: ^0.5.12+4
 
 
 dev_dependencies:
