--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   flutter_bloc: ^2.1.1
   cupertino_back_gesture: ^0.0.4+1
   shared_preferences: ^0.5.12+4
+  image_picker: ^0.6.3+1
+  path: ^1.7.0
+
 
 
 dev_dependencies:
@@ -67,8 +70,9 @@ flutter:
     - assets/nextbutton.png
     - assets/signin.png
     - assets/signup.png
-
-
+    - assets/commerce.png
+    - assets/engineericon.png
+    - assets/mathsscience.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
