--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^0.5.12+4
   image_picker: ^0.6.3+1
   path: ^1.7.0
+  flutter_otp: ^0.3.2
 
 
 
@@ -73,6 +74,8 @@ flutter:
     - assets/commerce.png
     - assets/engineericon.png
     - assets/mathsscience.png
+    - assets/teacher.png
+    - assets/student.png
 
 
   # An image asset can refer to one or more resolution-specific "variants", see
